--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql= false
 #spring.jpa.properties.hibernate.hb2dll.auto = update
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
